k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trend-service
spec:
  type: NodePort
  selector:
    app: trend-app
  ports:
  - port: 80
    targetPort: 80
